Fix frequent date buttons double border

--- a/src/components/base-components/DateFilter/FrequentDateButton/FrequentDateButton.scss
+++ b/src/components/base-components/DateFilter/FrequentDateButton/FrequentDateButton.scss
@@ -4,10 +4,15 @@
   font-size: 1.2rem;
   line-height: 26px;
   border: 1px solid rgba(0,0,0,.2);
+
   background-color: white;
   cursor: pointer;
 
   &.selected {
     background-color: #ffeca6;
+  }
+
+  &:not(:last-child) {
+    border-right: none;
   }
 }
